src/main/kotlin/com/example/ddd/order/domain/errors/ProductsNotFoundException.kt
package com.example.ddd.order.domain.errors

class ProductsNotFoundException(
  val ids: List<String>,
  message: String? = "",
  throwable: Throwable? = null
) : Exception(message, throwable)